# pybsm

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  cicd-pipeline.md  pyproject.toml
.gitlab-ci/: .gitlab-build.yml  .gitlab-docs.yml  .gitlab-publish.yml  .gitlab-quality.yml  .gitlab-security.yml  .gitlab-shared.yml  .gitlab-test.yml
docs/: conf.py  default_configs.rst  explanation.rst  functionality.rst  geospatial.rst  index.rst  installation.rst  introduction.rst  metrics.rst  miscellaneous.rst  noise.rst  otf.rst  radiance.rst  release_notes.rst  release_process.rst  releasing.rst  review_process.rst  simulation.rst  sphinx_server.py  useful_calculations.rst  utils.rst
docs/examples/: README.md  image_simulation_example.ipynb  pybsm_example.py
docs/examples/config/: pybsm_example_config.yaml
docs/miscellaneous/: style_sheet.rst  uav_default_config.json  uav_default_config_bare.json
docs/release_notes/: pending_release.rst  v0.10.0.rst  v0.10.1.rst  v0.10.2.rst  v0.11.0.rst  v0.12.0.rst  v0.13.0.rst  v0.14.0.rst  v0.14.1.rst  v0.14.2.rst  v0.14.3.rst  v0.2.0.rst  v0.3.0.rst  v0.3.1.rst  v0.4.0.rst  v0.4.1.rst  v0.4.2.rst  v0.4.3.rst  v0.5.0.rst  v0.5.1.rst  v0.6.0.rst  v0.7.0.rst  v0.8.0.rst  v0.9.0.rst
docs/release_notes/pending_release/: 108-interp2d.rst  112-python-upperbound.rst  add-image-simulator-classes.rst  image-simulator-bug-fix.rst  image-simulator-squeeze-fix.rst  otf-optimisation.rst  pending_release.rst  python313-numba-support.rst  remove-altitude-upper-bound.rst  sensor-qe-params.rst  syrupy-fixtures.rst  test-sensor-np-all.rst  update_python_versions.rst
examples/: pybsm_example.py
pybsm/: __init__.py  geospatial.py  metrics.py  noise.py  otf.py  pybsm.py  radiance.py  simulation.py  utils.py
pybsm/metrics/: __init__.py  functional.py  metrics.py
pybsm/otf/: functional.py  otf.py
pybsm/radiance/: __init__.py  functional.py  snr_metrics.py
pybsm/simulation/: functional.py  ref_image.py  scenario.py  sensor.py
scripts/: pycv2_installed_version.py  update_release_notes.sh
src/pybsm/: __init__.py  geospatial.py  noise.py  utils.py
src/pybsm/atms/: atmosphere_README.txt  fileDecoder.csv  fileDecoder_old.csv
src/pybsm/metrics/: __init__.py  functional.py  metrics.py
src/pybsm/otf/: __init__.py  functional.py  otf.py
src/pybsm/radiance/: __init__.py  functional.py  snr_metrics.py
src/pybsm/simulation/: __init__.py  functional.py  image_simulator.py  ref_image.py  scenario.py  sensor.py
tests/: __init__.py  conftest.py  test_utils.py
tests/geospatial/: test_geospatial.py
tests/geospatial/__snapshots__/: test_geospatial.ambr
tests/geospatial/__snapshots__/test_geospatial/: TestGeospatial.test_altitude_along_slant_path[0.0-1.0-1.0].json  TestGeospatial.test_altitude_along_slant_path[1.0-0.0-1.0].json  TestGeospatial.test_altitude_along_slant_path[1.0-1.0-1.0].json  TestGeospatial.test_curved_earth_slant_range[0.0-1.0-1.0].json  TestGeospatial.test_ground_sample_distance[2.0-2.5].json  TestGeospatial.test_nadir_angle[1.0-0.0-1.0].json  TestGeospatial.test_nadir_angle[1.0-1.0-1.0].json
tests/geospatial/data/: altitude_0_1_1.npy  altitude_1_0_1.npy
tests/metrics/: test_functional.py  test_metrics.py
tests/metrics/__snapshots__/: test_functional.ambr
tests/metrics/__snapshots__/test_functional/: TestFunctional.test_edge_height_overshoot[mtf_slice0-5.0-1.5707963267948966].json  TestFunctional.test_edge_height_overshoot[mtf_slice1-10.0-0].json  TestFunctional.test_edge_response[1.0-mtf_slice0-5.0-1.5707963267948966].json  TestFunctional.test_edge_response[2.0-mtf_slice2-1.0-0.7853981633974483].json  TestFunctional.test_edge_response[5.0-mtf_slice1-10.0-1.5707963267948966].json  TestFunctional.test_giqe3[1.0-1.0-1.0-2.0-2.0].json  TestFunctional.test_giqe3[2.0-2.0-2.0-1.0-1.0].json  TestFunctional.test_giqe4[1.0-1.0-1.0-2.0-2.0-0.0].json  TestFunctional.test_giqe4[2.0-2.0-2.0-1.0-1.0-1.5707963267948966].json  TestFunctional.test_giqe5[0.35-0.35-0.52832-50-1.5707963267948966].json  TestFunctional.test_giqe5[1.0-1.0-1.0-2.0-20.0].json  TestFunctional.test_giqe5[2.0-2.0-2.0-1.0-90.0].json  TestFunctional.test_giqe5_RER[mtf0-5.0-1.5707963267948966-1.5707963267948966].json  TestFunctional.test_giqe_edge_terms[mtf0-5.0-1.5707963267948966-1.5707963267948966].json  TestFunctional.test_ground_resolved_distance[mtf_slice1-0.0-10.0-0-1.0].json  TestFunctional.test_ground_resolved_distance[mtf_slice2-0.0-1.0-0.7853981633974483-10.0].json  TestFunctional.test_relative_edge_response[mtf_slice0-5.0-1.5707963267948966].json  TestFunctional.test_relative_edge_response[mtf_slice1-10.0-0].json
tests/noise/: test_noise.py
tests/noise/__snapshots__/: test_noise.ambr
tests/noise/__snapshots__/test_noise/: TestNoise.test_noise_gain[kernel1-expectation1].json  TestNoise.test_quantization_noise[1.0-1.0].json
tests/otf/: test_otf.py
tests/otf/__snapshots__/: test_otf.ambr
tests/otf/__snapshots__/test_otf/: TestApplyOTFToImage.test_apply_otf_to_image[ref_img0-1.0-1.0-otf_value0-1.0-1.0].json  TestCTEOTF.test_otf[u2-v2-0.0-1.0-1.0-2.0-2-2.0-2.0].json  TestCTEOTF.test_otf[u4-v4-1.0-1.0-1.0-1.0-1-1.0-1.0].json  TestCircularApertureOTFWithDefocus.test[u0-v0-1.0-1.0-0.0-0.0].json  TestDefocusOTF.test_otf[u0-v0-0.0-1.0].json  (+58 more)
tests/radiance/: test_functional.py  test_reflectance2photoelectrons.py  test_reflectance_to_photoelectrons.py
tests/radiance/__snapshots__/: test_functional.ambr
tests/radiance/data/: reflectance_2_photoelectrons_pe.npy  reflectance_2_photoelectrons_spectral_weights.npy  total_radiance_atm_one.npy  total_radiance_atm_zero.npy
tests/scenario/: test_scenario.py  test_utils.py
tests/scenario/__snapshots__/: test_scenario.ambr  test_utils.ambr
tests/scenario/data/: 1_1000_0_atm.npy  1_1000_300_atm.npy  1_1000_500_atm.npy  1_300_0_atm.npy
tests/sensor/: test_sensor.py
tests/simulation/: test_image_simulator.py  test_ref_image.py  test_simulation.py
tests/simulation/__snapshots__/: test_ref_image.ambr  test_simulation.ambr
(+59 files in other folders)
